Menu overflow totally fixed

--- a/css/menu.css
+++ b/css/menu.css
@@ -6,8 +6,6 @@
   position: absolute;
   top: 160px;
   left: 1095px;
-
-  overflow: hidden;
 }
 
 .menu .contents {
@@ -16,8 +14,6 @@
   background-color: var(--bg-color);
 
   margin: 10px;
-
-  overflow: hidden;
 }
 
 #search-title {
